Add export code to ipynb

--- a/ECG.ipynb
+++ b/ECG.ipynb
@@ -30,7 +30,7 @@
    ]
   },
   {
-   "attachments": {},
+     "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+"metadata": {},
    "outputs": [],
    "source": [
     "# Заменяем неизвестные значения на медиану в каждом столбце\n",
@@ -1098,6 +1098,63 @@
     "loss_function = nn.BCEWithLogitsLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "# train_with_stop(model, X_train, y_train, loss_function, optimizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Пробуем получить предсказание данных для нашей модели\n",
+    "\n",
+    "Для этого загрузим из текстового файла `test1.txt` и пропустим через модель\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test = np.loadtxt('openvino/test1.txt', delimiter =',')\n",
+    "x_test = np.expand_dims(x_test, axis=0)\n",
+    "print(x_test.shape)\n",
+    "torch_out = model(torch.from_numpy(x_test).float())\n",
+    "print(torch_out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Добавляем экспорт модели в OpenVINO\n",
+    "\n",
+    "OpenVINO не поддерживает родной формат PyTorch (.pth), поэтому сначала модель необходимо экспортировать в открытый и распространенный формат от MicroSoft ONNX (.onnx).  \n",
+    "\n",
+    "Пример кода для конвертирования представлен ниже.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.onnx\n",
+    "\n",
+    "x = torch.randn(1, 279, requires_grad=False)\n",
+    "\n",
+    "torch_out = model(x)\n",
+    "\n",
+    "# Export the model\n",
+    "torch.onnx.export(model,               # model being run\n",
+    "                  x,                         # model input (or a tuple for multiple inputs)\n",
+    "                  \"ecg.onnx\",   # where to save the model (can be a file or file-like object)\n",
+    "                  export_params=True,        # store the trained parameter weights inside the model file\n",
+    "                  opset_version=9,          # the ONNX version to export the model to\n",
+    "                  do_constant_folding=True,  # whether to execute constant folding for optimization\n",
+    "                  input_names = ['input'],   # the model's input names\n",
+    "                  output_names = ['output'] # the model's output names\n",
+    "                  )"
    ]
   },
   {
