--- a/ECG.ipynb
+++ b/ECG.ipynb
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-"metadata": {},
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Заменяем неизвестные значения на медиану в каждом столбце\n",
@@ -2225,18 +2225,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Экспортируем модель в ONNX\n",
+    "Для экспортирования модели пришлось немного модифицировать оригинальную архитектуру:\n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch.onnx\n",
+    "\n",
+    "x = torch.randn(1, 1, 5000, requires_grad=False)\n",
+    "\n",
+    "torch_out = model(x)\n",
+    "\n",
+    "# Export the model\n",
+    "torch.onnx.export(model,               # model being run\n",
+    "                  x,                         # model input (or a tuple for multiple inputs)\n",
+    "                  \"ecg_segm.onnx\",   # where to save the model (can be a file or file-like object)\n",
+    "                  export_params=True,        # store the trained parameter weights inside the model file\n",
+    "                  opset_version=11,          # the ONNX version to export the model to\n",
+    "                  do_constant_folding=True,  # whether to execute constant folding for optimization\n",
+    "                  input_names = ['input'],   # the model's input names\n",
+    "                  output_names = ['output'] # the model's output names\n",
+    "                  )\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
